Repaired approach to hiding Time Conductor Submit button
Fixes #2000
Fixes #2078
- Renamed .off to .invisible and added refinements;

--- a/platform/commonUI/general/res/sass/_global.scss
+++ b/platform/commonUI/general/res/sass/_global.scss
@@ -240,14 +240,16 @@ a.disabled {
     pointer-events: none;
 }
 
-.off {
+.invisible {
+    display: block;
     visibility: hidden;
-    opacity: 0;
     height: 0;
-    margin: 0;
     padding: 0;
     border: 0;
     margin: 0 !important;
+    transform: scale(0);
+    pointer-events: none;
+    position: absolute;
 }
 
 .sep {
